--- a/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
+++ b/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
@@ -13,7 +13,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div> 
             <h2>Parabens por concluir o treinamento </h2>
@@ -30,7 +30,7 @@
         <button class="botaovideo" id="painelTreinamento" class="botao-link">Painel de Treinamento</button>
         <script>
             document.getElementById("painelTreinamento").onclick = function () {
-            window.location.href = "./centraltreinamentos/centralTreinamentos.html";
+            window.location.href = "../centraltreinamentos/centralTreinamentos.html";
         };
         </script>
 
