--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento LGPD</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 
     
 </head>
@@ -15,7 +15,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <div class="opçoes">
@@ -56,7 +56,7 @@
         <button class="botaovideo" id="lgpd-aula1" class="botao-link">Visão Geral da Lei Geral <br> de Proteção de Dados</button>
         <script>
             document.getElementById("lgpd-aula1").onclick = function () {
-            window.location.href = "TreinamentosLGPD2.html";
+            window.location.href = "./TreinamentosLGPD2.html";
         };
         </script>
 
