--- a/TreinamentoCtms/TreinamentoCtms.html
+++ b/TreinamentoCtms/TreinamentoCtms.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Plataforma CTMS</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseImgBotoes.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseImgBotoes.css">
 </head>
 
 <body>
@@ -13,12 +13,12 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 </ul>
             </nav>
         </div>
@@ -28,7 +28,7 @@
 
     <div class="painel">
         <div class="imgtec">
-            <img class="imgtec" src="./assets/img/Integração de Cursos.jpg" id="tech">
+            <img class="imgtec" src="../assets/img/Integração de Cursos.jpg" id="tech">
         </div>
         
         <div class="Botoes_grid">
@@ -45,11 +45,11 @@
     </div>
     <script>
         document.getElementById("BotaoRegulatorio").onclick = function () {
-            window.location.href = "./treinamentoregulatorio/TreinamentoRegulatorio.html"
+            window.location.href = "../treinamentoregulatorio/TreinamentoRegulatorio.html"
         };
 
         document.getElementById("BotaoFeasibility").onclick = function () {
-            window.location.href = "./treinamentofeasibility/TreinamentoFeasibility.html"
+            window.location.href = "../treinamentofeasibility/TreinamentoFeasibility.html"
         };
     </script>
 </body>
