--- a/treinamentoregulatorio/TreinamentoRegulatorioformularioSatisfacao.html
+++ b/treinamentoregulatorio/TreinamentoRegulatorioformularioSatisfacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificado Regulatorio</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">    
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">    
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div> 
             <h2>Parabens por concluir o treinamento </h2>
@@ -30,7 +30,7 @@
         <button class="botaovideo" id="painelTreinamento" class="botao-link">Painel de Treinamento</button>
         <script>
             document.getElementById("painelTreinamento").onclick = function () {
-            window.location.href = "./centraltreinamentos/centralTreinamentos.html";
+            window.location.href = "../centraltreinamentos/centralTreinamentos.html";
         };
         </script>
 
