Alteracao de caminhos

--- a/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula3.html
+++ b/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula3.html
@@ -18,7 +18,7 @@
             </div>
             <div class="opçoes">
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
                         <li><a href="TreinamentoFinanceiroPolotrial_Aula1.html">Gestão Financeira</a></li>
@@ -42,7 +42,7 @@
         <button class="botaovideo" id="lgpd-aula2" class="botao-link">Menu Treinamentos</button>
         <script>
             document.getElementById("lgpd-aula2").onclick = function () {
-                window.location.href = "./centraltreinamentos/centralTreinamentos.html";
+                window.location.href = "../centraltreinamentos/centralTreinamentos.html";
             };
         </script>
 </body>
