--- a/secao_pops/centralpops.html
+++ b/secao_pops/centralpops.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                 </ul>
             </nav>
         </div>
