--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -20,7 +20,7 @@
             </div>
             <div class="opçoes">
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
                             <li><a href="TreinamentosLGPD.html">O que é a Lei Geral de Proteção de Dados LGPD</a></li>
