--- a/treinamentoqualidade/TreinamentoQualidade2.html
+++ b/treinamentoqualidade/TreinamentoQualidade2.html
@@ -18,7 +18,7 @@
             </div>
             <div class="opçoes">
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
                         <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
