--- a/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula2.html
+++ b/Treinamento_Financeiro_Polotrial/TreinamentoFinanceiroPolotrial_Aula2.html
@@ -18,7 +18,7 @@
             </div>
             <div class="opçoes">
                 <ul class="menu">
-                    <li><a href="./centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
+                    <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
                         <li><a href="TreinamentoFinanceiroPolotrial_Aula1.html">Gestão Financeira</a></li>
