--- a/treinamentoqualidade/TreinamentoQualidadeformularioSatisfacao.html
+++ b/treinamentoqualidade/TreinamentoQualidadeformularioSatisfacao.html
@@ -30,7 +30,7 @@
         <button class="botaovideo" id="painelTreinamento" class="botao-link">Painel de Treinamento</button>
         <script>
             document.getElementById("painelTreinamento").onclick = function () {
-            window.location.href = "./centraltreinamentos/centralTreinamentos.html";
+            window.location.href = "../centraltreinamentos/centralTreinamentos.html";
         };
         </script>
 
