--- a/treinamentoqualidade/TreinamentoQualidade3.html
+++ b/treinamentoqualidade/TreinamentoQualidade3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Qualidade</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <div class="opçoes">
