--- a/treinamentotecnologia/TreinamentoTecnologia_PoloForms.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_PoloForms.html
@@ -143,7 +143,7 @@
         </div>
         <br>
         <button type="submit" id="botaoverificar">Verificar</button>
-        <button type="button" id="finishButton" style="display: none;"></button>Finalizar</button>
+        <button type="button" id="finishButton" style="display: none;">Finalizar</button>
     </form>
 
     <script>
