--- a/treinamentotecnologia/TreinamentoTecnologia_PortalChamado2.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_PortalChamado2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treinamento Tecnologia</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/HeaderBaseTreinamentos.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
 <body>
@@ -13,11 +13,11 @@
         <div class="menu_pagina">
             <div class="img_menu">
                 <a href="https://svriglobal.com/">
-                    <img class="logo" src="./assets/img/logo-science-valley.png" alt="Logo Science">
+                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
                 </a>
             </div>
             <ul class="menu">
-                <li><a href="./integracaoti/IntegracaoTI.html">Integração Science</a></li>
+                <li><a href="../integracaoti/IntegracaoTI.html">Integração Science</a></li>
                 <li><a href="#">Aulas</a>
                     <ul>
                         <li><a href="TreinamentoTecnologia_PortalChamado.html">Abertura de chamado</a></li>
