--- a/treinamentotecnologia/TreinamentoTecnologia_PortalChamado2.html
+++ b/treinamentotecnologia/TreinamentoTecnologia_PortalChamado2.html
@@ -40,7 +40,7 @@
     <button class="botaovideo" id="proximo">Finalizar Integração</button>
     <script>
         document.getElementById("proximo").onclick = function () {
-            window.location.href = "https://forms.office.com/r/h8S3sXGJAM";
+            window.location.href = "../integracaoti/FormularioIntegracao.html";
         };
     </script>
 </body>
