--- a/politicas/politicasdone.html
+++ b/politicas/politicasdone.html
@@ -50,7 +50,7 @@
             };
 
             document.getElementById("Botaoformdiretrizes").onclick = function () {
-                window.location.href = "https://forms.office.com/r/h8S3sXGJAM"
+                window.location.href = "../integracaoti/FormularioIntegracao.html"
             };
         </script>
 </body>
