bash backup file
Uma bash de Backup caso haja necessidade de voltar a versão anterior.

--- a/centraltreinamentos/centralTreinamentos.html
+++ b/centraltreinamentos/centralTreinamentos.html
@@ -60,7 +60,7 @@
             <div class="CursosList">
                 <h3>Academy</h3>
                 <img class="imgTreinamentos"
-                    src="../assets/img/Download free vector of Illustration of graphic design icon by Tang about pattern, layout artist, content icons, app, and application 297243.jpg">
+                    src="../assets/img/Academy.jpg">
                 
                 <button id="BotaoAcademy"  class="botaoAcesso">Acessar</button>
             </div>
