--- a/TreinamentoCtms/TreinamentoCtms.html
+++ b/TreinamentoCtms/TreinamentoCtms.html
@@ -34,18 +34,18 @@
         <div class="Botoes_grid">
 
             <div class="Botoes">
-                <button id="BotaoRegulatorio" class="botaovideo">REGULATÓRIO</button>
+                <button id="BotaoRegulatorio" class="botaovideo">CTMS REGULATÓRIO</button>
             </div>
 
             <div class="Botoes">
-                <button id="BotaoFeasibility" class="botaovideo">FEASIBILITY</button>
+                <button id="BotaoFeasibility" class="botaovideo">CTMS FEASIBILITY</button>
             </div>
 
         </div>
     </div>
     <script>
         document.getElementById("BotaoRegulatorio").onclick = function () {
-            window.location.href = "../treinamentoregulatorio/TreinamentoRegulatorio.html"
+            window.location.href = "../treinamentoregulatorioCTMS/TreinamentoRegulatorio.html"
         };
 
         document.getElementById("BotaoFeasibility").onclick = function () {
