--- a/treinamentoqualidade/TreinamentoQualidade.html
+++ b/treinamentoqualidade/TreinamentoQualidade.html
@@ -21,11 +21,10 @@
                     <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
-                        <li><a href="TreinamentoQualidade.html"> Cadastro de Monitoria no PoloTrail </a></li>
-                        <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
-                        <li><a href="TreinamentoQualidade3.html"> Regulatório Plataforma Brasil </a></li>
-                        <li><a href="TreinamentoQualidade4.html"> Utilização do PoloTrail </a></li>
-                        <li><a href="TreinamentoQualidade5.html"> Utilização do banco de dados</a></li>
+                        <li><a href="TreinamentoQualidade.html"> CEP - CONEP </a></li>
+                        <li><a href="TreinamentoQualidade2.html"> Cadastro </a></li>
+                        <li><a href="TreinamentoQualidade3.html"> Folha de rosto </a></li>
+                        <li><a href="TreinamentoQualidade4.html"> Relatórios </a></li>
                    </ul>
                     </li>
                 </ul>
@@ -34,13 +33,11 @@
 
     </header>
     <h2> TREINAMENTO - QUALIDADE </h2>
-    <h3> Cadastro de Monitoria no PoloTrail </h3>
+    <h3> CEP - CONEP </h3>
         <div class="videoTreinamento">
             <iframe class="videoTreinamento"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=edaa98d6-d589-48d5-828e-ba7d5af7f233&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
-            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="e Learning - Cadastro de Monitoria no PoloTrial_Abr23.mp4"></iframe></div> 
-        <button class="botaovideo" id="qualidade-aula1">Folha de rosto</button>
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=04dc508c-9b16-4ecb-b57b-a6ef7ffd3039&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="1 - Plataforma Brasil-CEP-CONEP.mp4"></iframe></div> 
+        <button class="botaovideo" id="qualidade-aula1">Cadastro</button>
         <script>
             document.getElementById("qualidade-aula1").onclick = function () {
                 window.location.href = "TreinamentoQualidade2.html";
