--- a/treinamentoqualidade/TreinamentoQualidade3.html
+++ b/treinamentoqualidade/TreinamentoQualidade3.html
@@ -21,9 +21,10 @@
                     <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
-                        <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
-                        <li><a href="TreinamentoQualidade3.html"> Regulatório Plataforma Brasil </a></li>
-                        <li><a href="TreinamentoQualidade5.html"> Utilização do banco de dados</a></li>
+                        <li><a href="TreinamentoQualidade.html"> CEP - CONEP </a></li>
+                        <li><a href="TreinamentoQualidade2.html"> Cadastro </a></li>
+                        <li><a href="TreinamentoQualidade3.html"> Folha de rosto </a></li>
+                        <li><a href="TreinamentoQualidade4.html"> Relatórios </a></li>
                    </ul>
                     </li>
                 </ul>
@@ -33,16 +34,14 @@
     </header>
     <h2> TREINAMENTO - QUALIDADE </h2>
     
-    <h3> Regulatório Plataforma Brasil </h3>
+    <h3> Folha de rosto </h3>
         <div class="videoTreinamento">
             <iframe class="videoTreinamento"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=1866f4c2-2383-4dfd-8cdf-c9b780789256&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
-            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="Treinamento - Regulatório_Plataforma Brasil-20230131_154345-Gravação de Reunião (online-video-cutter.com).mp4"></iframe></div> 
-        <button class="botaovideo" id="qualidade-aula3">Utilização do banco de dados</button>
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=9a36730d-941d-464c-a303-d7231a0aaedc&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="3 - Treinamento PB_ como obter folha de rosto.-20230502_101101-Gravação de Reunião.mp4"></iframe></div> 
+        <button class="botaovideo" id="qualidade-aula3">Relatórios</button>
         <script>
             document.getElementById("qualidade-aula3").onclick = function () {
-                window.location.href = "TreinamentoQualidade5.html";
+                window.location.href = "TreinamentoQualidade4.html";
             };
         </script>
 </body>
