--- a/treinamentoqualidade/TreinamentoQualidade5.html
+++ b/treinamentoqualidade/TreinamentoQualidade5.html
@@ -21,9 +21,10 @@
                     <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
-                        <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
-                        <li><a href="TreinamentoQualidade3.html"> Regulatório Plataforma Brasil </a></li>
-                        <li><a href="TreinamentoQualidade5.html"> Utilização do banco de dados</a></li>
+                        <li><a href="TreinamentoQualidade.html"> CEP - CONEP </a></li>
+                        <li><a href="TreinamentoQualidade2.html"> Cadastro </a></li>
+                        <li><a href="TreinamentoQualidade3.html"> Folha de rosto </a></li>
+                        <li><a href="TreinamentoQualidade4.html"> Relatórios </a></li>
                    </ul>
                     </li>
                 </ul>
