--- a/treinamentoqualidade/TreinamentoQualidade4.html
+++ b/treinamentoqualidade/TreinamentoQualidade4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundo Curso</title>
+    <title>Treinamento Qualidade</title>
     <link rel="stylesheet" type="text/css" href="../assets/css/HeaderBaseTreinamentos.css">
 </head>
 
@@ -21,11 +21,10 @@
                     <li><a href="../centraltreinamentos/centralTreinamentos.html">Painel de Treinamentos</a></li>
                     <li><a href="#">Aulas</a>
                         <ul>
-                        <li><a href="TreinamentoQualidade.html"> Cadastro de Monitoria no PoloTrail </a></li>
-                        <li><a href="TreinamentoQualidade2.html"> Como obter folha de rosto </a></li>
-                        <li><a href="TreinamentoQualidade3.html"> Regulatório Plataforma Brasil </a></li>
-                        <li><a href="TreinamentoQualidade4.html"> Utilização do PoloTrail </a></li>
-                        <li><a href="TreinamentoQualidade5.html"> Utilização do banco de dados</a></li>
+                        <li><a href="TreinamentoQualidade.html"> CEP - CONEP </a></li>
+                        <li><a href="TreinamentoQualidade2.html"> Cadastro </a></li>
+                        <li><a href="TreinamentoQualidade3.html"> Folha de rosto </a></li>
+                        <li><a href="TreinamentoQualidade4.html"> Relatórios </a></li>
                    </ul>
                     </li>
                 </ul>
@@ -35,17 +34,16 @@
     </header>
     <h2> TREINAMENTO - QUALIDADE </h2>
     
-    <h3> Utilização do PoloTrail</h3>
+    <h3> Relatórios </h3>
         <div class="videoTreinamento">
             <iframe class="videoTreinamento"
-            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=906fb382-f09b-4648-bdd4-a3e49c154099&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
-            width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
-            title="Utilização do PoloTrial I.mp4"></iframe>
+            src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=e54c94d7-b639-46b9-8114-f8162a67d8b6&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create" width="640" height="360" frameborder="0" scrolling="no" allowfullscreen title="4 - Relatórios-Print PB- Modulo Regulatório.mp4"></iframe>
         </div> 
-        <button class="botaovideo" id="qualidade-aula4">Utilização do banco de dados</button>
+        <button class="botaovideo" id="qualidade-aula4">Formulário Qualidade</button>
+
         <script>
             document.getElementById("qualidade-aula4").onclick = function () {
-                window.location.href = "TreinamentoQualidade5.html";
+                window.location.href = "TreinamentoQualidadeformularioSatisfacao.html";
             };
         </script>
 </body>
