alterando camino do download

--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -53,7 +53,7 @@
                  frameborder="0" scrolling="no" allowfullscreen
                 title="LGPD - LIVE 1 - O que é a Lei Geral de Proteção de Dados LGPD.mp4"></iframe> 
         </div>    
-        <button class="botaovideo" id="lgpd-aula1" class="botao-link">Visão Geral da Lei Geral <br> de Proteção de Dados</button>
+        <button class="botaovideo" id="lgpd-aula1" class="botao-link"> Próximo video </button>
         <script>
             document.getElementById("lgpd-aula1").onclick = function () {
             window.location.href = "./TreinamentosLGPD2.html";
