--- a/treinamentolgpd/TreinamentosLGPD10.html
+++ b/treinamentolgpd/TreinamentosLGPD10.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=f5b0f446-f7cd-47b9-85eb-5d0e96b37714&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 10 - O papel da liderança na conformidade à LGPD.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula10" class="botao-link">A LGPD na sua vida pessoal e
-            profissional</button>
+        <button class="botaovideo" id="lgpd-aula10" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula10").onclick = function () {
                 window.location.href = "TreinamentosLGPD11.html";
