--- a/treinamentolgpd/TreinamentosLGPD11.html
+++ b/treinamentolgpd/TreinamentosLGPD11.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=9b39b6be-19a2-4ab9-b9f3-79b66231f852&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 11 - A LGPD na sua vida pessoal e profissional.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula11" class="botao-link">O que fazer em um incidentes de tratamento de
-            dados</button>
+        <button class="botaovideo" id="lgpd-aula11" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula11").onclick = function () {
                 window.location.href = "TreinamentosLGPD12.html";
