--- a/treinamentolgpd/TreinamentosLGPD12.html
+++ b/treinamentolgpd/TreinamentosLGPD12.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=03ea5db9-3ca4-4226-b69b-c8aeae984602&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 12 - O que fazer em um incidentes de tratamento de dados.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula12" class="botao-link">Impactos da LGPD nos fornecedores da
-            instituição</button>
+        <button class="botaovideo" id="lgpd-aula12" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula12").onclick = function () {
                 window.location.href = "TreinamentosLGPD13.html";
