--- a/treinamentolgpd/TreinamentosLGPD2.html
+++ b/treinamentolgpd/TreinamentosLGPD2.html
@@ -52,7 +52,7 @@
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 2 - Visão Geral da Lei Geral de Proteção de Dados v2.mp4"></iframe>
         </div>   
-        <button class="botaovideo" id="lgpd-aula2" class="botao-link">O que é Dado Pessoal</button>
+        <button class="botaovideo" id="lgpd-aula2" class="botao-link"> Próximo video </button>
        
         <script>
             document.getElementById("lgpd-aula2").onclick = function () {
