--- a/treinamentolgpd/TreinamentosLGPD3.html
+++ b/treinamentolgpd/TreinamentosLGPD3.html
@@ -52,7 +52,7 @@
         title="LGPD - LIVE 3 - O que é Dado Pessoal.mp4"></iframe>
     </div>
     
-    <button class="botaovideo" id="lgpd-aula3">Fundamentos da LGPD</button>
+    <button class="botaovideo" id="lgpd-aula3">Próximo video</button>
     
     <script>
         document.getElementById("lgpd-aula3").onclick = function () {
