--- a/treinamentolgpd/TreinamentosLGPD4.html
+++ b/treinamentolgpd/TreinamentosLGPD4.html
@@ -51,7 +51,7 @@
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 4 - Fundamentos da LGPD.mp4"></iframe>
         </div> 
-        <button class="botaovideo" id="lgpd-aula4">Tratamento Legal de Dados Pessoais</button>
+        <button class="botaovideo" id="lgpd-aula4">Próximo video</button>
         
         <script>
             document.getElementById("lgpd-aula4").onclick = function () {
