--- a/treinamentolgpd/TreinamentosLGPD8.html
+++ b/treinamentolgpd/TreinamentosLGPD8.html
@@ -50,7 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=7ad5bcd1-4b40-4b04-9937-f94dc2dd2bcb&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 8 - Os 10 Princípios para Tratamento de Dados pessoais.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula8" class="botao-link">O Projeto LGPD na instituição</button>
+        <button class="botaovideo" id="lgpd-aula8" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula8").onclick = function () {
                 window.location.href = "TreinamentosLGPD9.html";
