--- a/treinamentolgpd/TreinamentosLGPD9.html
+++ b/treinamentolgpd/TreinamentosLGPD9.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=4e90d8e0-4c7b-4165-af65-6b381c03b6e2&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 09 - O Projeto LGPD na instituição v1.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula9" class="botao-link">O papel da liderança na conformidade à
-            LGPD</button>
+        <button class="botaovideo" id="lgpd-aula9" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula9").onclick = function () {
                 window.location.href = "TreinamentosLGPD10.html";
