--- a/treinamentolgpd/TreinamentosLGPD5.html
+++ b/treinamentolgpd/TreinamentosLGPD5.html
@@ -51,7 +51,7 @@
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 5 -Tratamento Legal de Dados Pessoais.mp4"></iframe></div> 
         
-            <button class="botaovideo" id="lgpd-aula5" class="botao-link"> Quais áreas tratam dados pessoais</button>
+            <button class="botaovideo" id="lgpd-aula5" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula5").onclick = function () {
             window.location.href = "TreinamentosLGPD6.html";
