--- a/treinamentolgpd/TreinamentosLGPD6.html
+++ b/treinamentolgpd/TreinamentosLGPD6.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=aa0157d1-841c-4475-8fec-d94898b1d62c&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 6 - Quais áreas tratam dados pessoais.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula6" class="botao-link">As 10 Bases legais de tratamento de dados
-            pessoais</button>
+        <button class="botaovideo" id="lgpd-aula6" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula6").onclick = function () {
                 window.location.href = "TreinamentosLGPD7.html";
