--- a/treinamentolgpd/TreinamentosLGPD7.html
+++ b/treinamentolgpd/TreinamentosLGPD7.html
@@ -50,8 +50,7 @@
             src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=2c79801a-4ae9-4954-9c85-5cfa17720e0a&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
             width="640" height="360" frameborder="0" scrolling="no" allowfullscreen
             title="LGPD - LIVE 7 - As 10 Bases legais de tratamento de dados pessoais.mp4"></iframe></div> 
-        <button class="botaovideo" id="lgpd-aula7" class="botao-link">Os 10 Princípios para Tratamento de Dados
-            pessoais</button>
+        <button class="botaovideo" id="lgpd-aula7" class="botao-link">Próximo video</button>
         <script>
             document.getElementById("lgpd-aula7").onclick = function () {
                 window.location.href = "TreinamentosLGPD8.html";
