--- a/treinamentolgpd/TreinamentosLGPD.html
+++ b/treinamentolgpd/TreinamentosLGPD.html
@@ -50,9 +50,13 @@
         <div class="videoTreinamento">
             <iframe class="videoTreinamento"
                 src="https://netorgft4487772.sharepoint.com/sites/ScienceValley/_layouts/15/embed.aspx?UniqueId=3925cfa1-f13a-4d34-9e5e-6421ade8e864&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create"
-                 frameborder="0" scrolling="no" allowfullscreen
+                frameborder="0" scrolling="no" allowfullscreen
                 title="LGPD - LIVE 1 - O que é a Lei Geral de Proteção de Dados LGPD.mp4"></iframe> 
-        </div>    
+        </div>  
+        
+        <!-- <iframe src="https://drive.google.com/file/d/1W8hRdok9ASCNr8Y_p7V_tw6qZrTD3o3r/preview" width="640" height="480" allow="autoplay"></iframe> -->
+
+        
         <button class="botaovideo" id="lgpd-aula1" class="botao-link"> Próximo video </button>
         <script>
             document.getElementById("lgpd-aula1").onclick = function () {
