--- a/integracaoti/FormularioIntegracao.html
+++ b/integracaoti/FormularioIntegracao.html
@@ -21,7 +21,7 @@
 
     </header>    
     
-    <h3> Formulario para emição do certificado </h5>
+    <h3> Formulario para emissão do certificado </h5>
 
         <div class="videoTreinamento">
             <iframe class="videoTreinamento"
