new formulario seçao aulas

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
                     href="https://netorgft4487772.sharepoint.com/sites/ScienceValley/Documentos%20Compartilhados/Forms/AllItems.aspx?id=%2Fsites%2FScienceValley%2FDocumentos%20Compartilhados%2FIntegra%C3%A7%C3%A3o%20Science%2FINTEGRA%C3%87%C3%83O%20CONTROLADORIA&p=true&ga=1"><button
                         class="btn btn-sidebar" id="Botaohubtreinamentos">Integração
                         Controladoria</button></a>
-                <a href="politicas\politicasdone.html"><button class="btn btn-sidebar" id="Botaohubtreinamentos">Políticas e
+                <a href="politicas\politicasdone.html"><button class="btn btn-sidebar"
+                        id="Botaohubtreinamentos">Políticas e
                         Diretrizes</button></a>
-                <a href="integracaoti\IntegracaoTI.html"><button class="btn btn-sidebar" id="Botaohubtreinamentos">Integração
+                <a href="integracaoti\IntegracaoTI.html"><button class="btn btn-sidebar"
+                        id="Botaohubtreinamentos">Integração
                         Tecnologia</button></a>
             </nav>
         </div>
@@ -36,7 +38,8 @@
         <button id="toggleSidebar" class="toggle-sidebar-btn d-md-none">☰</button>
 
         <!-- Conteúdo principal -->
-        <main class="flex-grow-1 p-4">
+
+        <main class="flex-grow-1 p-4" >
             <h2>BEM VINDO!</h2>
             <h4>Assista o vídeo institucional</h4>
 
