--- a/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
+++ b/treinamentolgpd/TreinamentoLGPDFormularioSatisfacao.html
@@ -12,30 +12,35 @@
 
 <body>
     <header>
-        <div class="menu_pagina">
-            <div class="img_menu">
-                <a href="https://svriglobal.com/">
-                    <img class="logo" src="../assets/img/logo-science-valley.png" alt="Logo Science">
-                </a>
-            </div> 
-            <h2>Parabens por concluir o treinamento </h2>
+        <div class="container">
+            <div class="menu_video">
+                <a href="https://svriglobal.com/"><img class="logo" src="../assets/img/logo-science-valley.png"
+                        alt="Logo Science"></a>
+                <div class="menu_buttons">
+                    <div>
+                        <h2>Parabéns por concluir o treinamento! </h2>
+                    </div>
+                </div>
+                <div class="menu_buttons">
+                    <a class="BtnMenu" href="/treinamentolgpd/TreinamentosLGPD.html">Voltar para Treinamentos</a>
+                </div>
+            </div>
         </div>
 
-    </header>    
-    
+    </header>
     <h2>TREINAMENTO - LGPD</h2>
     <h3> Formulario para emissão do certificado </h5>
         <div class="videoTreinamento">
-            <iframe class="videoTreinamento"
-            width="640px" height="480px" src="https://forms.office.com/Pages/ResponsePage.aspx?id=prA6w5_bT0u6yRmFp-cite-u8S2Hbf1PhF3SjS42Q_VUMjcyTkJDWTRZRUYyWUdLQjRXUk9FRjk2Wi4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
-        </div>    
-        <button class="botaovideo" id="painelTreinamento" class="botao-link">Painel de Treinamento</button>
+            <iframe class="videoTreinamento" width="640px" height="480px"
+                src="https://forms.office.com/Pages/ResponsePage.aspx?id=prA6w5_bT0u6yRmFp-cite-u8S2Hbf1PhF3SjS42Q_VUMjcyTkJDWTRZRUYyWUdLQjRXUk9FRjk2Wi4u&embed=true"
+                frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh"
+                allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
+        </div>
         <script>
             document.getElementById("painelTreinamento").onclick = function () {
-            window.location.href = "../centraltreinamentos/centralTreinamentos.html";
-        };
+                window.location.href = "../centraltreinamentos/centralTreinamentos.html";
+            };
         </script>
-
 </body>
 
 </html>
